# firefly

./: .gitignore  Cargo.toml  README.md  admin.conf  index.html  test.sql
assets/: theme-my.css  theme-my.json
assets/js/: main.js
assets/module/: admin.css  admin.js  contextMenu.js  dataGrid.js  formX.js  index.js  layRouter.js  login.css  printer.js  setter.js  tableX.js
assets/module/cascader/: cascader.css  cascader.js
assets/module/dropdown/: dropdown.css  dropdown.js
assets/module/fileChoose/: fileChoose.js
assets/module/steps/: steps.css  steps.js
components/console/: error-404.html  workplace.html
components/example/: calendar.html  course.html  dialog.html  question.html  router-demo.html  table-crud.html
components/system/: authorities.html  dictionary.html  login-record.html  organization.html  role.html  user.html
components/template/form/: form-advance.html  form-basic.html  form-step.html
components/template/table/: table-advance.html  table-basic.html  table-card.html  table-img.html
components/user/: info.html  login.html  password.html
golang/: Makefile  broker  go.mod  go.sum  go.work  go.work.sum
golang/admin/: go.mod  go.sum  routes.go  settings.yml
golang/admin/cmd/: main.go
golang/admin/fakes/: article.go  common.go  order.go
golang/admin/handlers/: article.go  authorize.go  order.go  role.go  routes.go  user.go
golang/admin/models/: base.go  nested.go  sqltag.go
golang/commun/: go.mod  main.go
json/: login.json  menus.json
rust/: Cargo.toml
rust/admin/src/: main.rs
rust/commun/: Cargo.toml
src/: main.rs
(+10 files in other folders)
